<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.ThirdFragment">

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtProp1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtNIM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="gambar foto si ganteng"
        android:src="@drawable/fotoku"
        app:layout_constraintBottom_toTopOf="@+id/txtNama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtNIM"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txtProp2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtKelas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNama"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtKelas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txtProp3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txthobi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNIM" />

    <TextView
        android:id="@+id/txthobi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txtProp4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKelas" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txtProp5"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txthobi" />

    <ImageView
        android:id="@+id/imggithub"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgtwitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />

    <ImageView
        android:id="@+id/imgtwitter"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aku"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imggithub"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mediasosial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imggithub,imgtwitter" />

    <TextView
        android:id="@+id/aku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ucup"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgtwitter"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />

</androidx.constraintlayout.widget.ConstraintLayout>